<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/amount">

                    </TextView>

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10dp">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:id="@+id/amount_edt"
                        android:hint="@string/amount2">

                    </EditText>

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/type">

                    </TextView>

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10dp">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:id="@+id/type_edt"
                        android:hint="@string/category">

                    </EditText>

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/note">

                    </TextView>

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:id="@+id/note_edt"
                        android:hint="@string/add_a_note">

                    </EditText>

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:gravity="center">
                    <Button
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/delete"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:background="#734AAC"
                        android:textColor="@color/white"
                        android:id="@+id/btn_updt_Del">
                    </Button>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:gravity="center">
                    <Button
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/update"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:background="#734AAC"
                        android:textColor="@color/white"
                        android:id="@+id/btn_updt_Update">
                    </Button>

                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>