<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_margin="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp"
    android:elevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type2"
            android:id="@+id/type_expense_ds"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#FF1100"
            android:gravity="center">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount1"
            android:id="@+id/amount_expense_ds"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#122ECA"
            android:gravity="center">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_15_nov_2023"
            android:id="@+id/date_expense_ds"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#122ECA"
            android:gravity="center">
        </TextView>


    </LinearLayout>

</androidx.cardview.widget.CardView>